--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "autoprefixer": "^10.4.14",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.24",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "axios": "^1.4.0"
     }
 }
