--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:N4w0ou8x7UOAds+XhLTrcHI8FTO95nnIZ3SRlrXfIiE=
+APP_KEY=base64:pSvTIXYBN7Vlol/q0SNEapMJxuWkMsBCl/eTmvrgwVE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ekommerce
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
